Removed leveloffsets for the Appliance Hardening Guide.

--- a/doc-Appliance_Hardening_Guide/topics/DB_Password.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/DB_Password.adoc
@@ -1,5 +1,5 @@
 [[_chap_red_hat_cloudforms_security_guide_setting_the_password_for_the_database_appliance]]
-= Restricting Hosts Access to the Database
+=== Restricting Hosts Access to the Database
 
 Strengthening the host-based authentication (HBA) settings on a database appliance helps with preventing unauthorized access from external hosts.
 The HBA settings restrict access to an IP address range so that only hosts within that range have access.
