--- a/doc-Appliance_Hardening_Guide/topics/DB_SSL.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/DB_SSL.adoc
@@ -1,5 +1,5 @@
 [[_chap_red_hat_cloudforms_security_guide_setting_ssl_for_the_database_appliance]]
-= Configuring the Database to use SSL
+=== Configuring the Database to use SSL
 
 {product-title} initially connects to the database through an unencrypted communication.
 If using multiple appliances connecting to a single database appliance, you can set up the database connection to use SSL.
