--- a/doc-Appliance_Hardening_Guide/topics/Database_Security.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/Database_Security.adoc
@@ -1,8 +1,6 @@
-= Database Security
+== Database Security
 
-:leveloffset: 2
 include::DB_Password.adoc[]
 
-:leveloffset: 2
 include::DB_SSL.adoc[]
 
