--- a/doc-Appliance_Hardening_Guide/topics/HBAC.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/HBAC.adoc
@@ -1,5 +1,5 @@
 [[_chap_red_hat_cloudforms_security_guide_hbac]]
-= Configuring Host-Based Access Control Rules on your IPA Server
+=== Configuring Host-Based Access Control Rules on your IPA Server
 
 {product-title} provides support for external authentication using an IPA server.
 However, there are certain recommendations to enhance security to your appliance, such as creating a specific user group and host group that can access the appliance authentication service.
