--- a/doc-Appliance_Hardening_Guide/topics/Introduction.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/Introduction.adoc
@@ -1,6 +1,6 @@
 [preface]
 [[_chap_red_hat_cloudforms_security_guide_introduction_to_securing_red_hat_cloudforms]]
-= Introduction to Hardening {product-title}
+== Introduction to Hardening {product-title}
 
 The {product-title} appliance is distributed as a virtual machine image, which provides users with a simple installation process.
 The appliance also contains a set of factory default settings that can expose appliances to vulnerabilities if left unset.
