--- a/doc-Appliance_Hardening_Guide/topics/Keys.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/Keys.adoc
@@ -1,5 +1,5 @@
 [[_chap_red_hat_cloudforms_security_guide_creating_keys]]
-= Creating Custom Encryption Keys
+=== Creating Custom Encryption Keys
 
 To avoid storing passwords in plain text, {product-title} appliances use an encryption key to encode and decode passwords.
 Each appliance stores the key in the `/var/www/miq/vmdb/certs/v2_key`. Changing the encryption key is recommended during setting up new {product-title} appliances only.
