--- a/doc-Appliance_Hardening_Guide/topics/Root_Password.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/Root_Password.adoc
@@ -1,5 +1,5 @@
 [[_chap_red_hat_cloudforms_security_guide_setting_the_root_password_on_the_appliance]]
-= Setting the Root Password on the Appliance
+=== Setting the Root Password on the Appliance
 
 The {product-title} appliance is a virtual machine image that runs on a Red Hat Enterprise Linux-based operating system.
 This means users can access the base operating system through SSH.
