--- a/doc-Appliance_Hardening_Guide/topics/SCAP.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/SCAP.adoc
@@ -1,5 +1,5 @@
 [[_chap_red_hat_cloudforms_security_guide_scap]]
-= Applying SCAP Standards
+=== Applying SCAP Standards
 
 The Security Content Automation Protocol (SCAP) is a set of standards to assist with vulnerability management and policy compliance. {product-title} provides a set of SCAP standards to apply to your appliance. View these SCAP rules in the `/var/www/miq/lib/appliance_console/config/scap_rules.yml` file.
 
