--- a/doc-Appliance_Hardening_Guide/topics/SSH_Keys.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/SSH_Keys.adoc
@@ -1,5 +1,5 @@
 [[_chap_red_hat_cloudforms_security_guide_setting_ssh_keys]]
-= Setting SSH Keys on the Appliance
+=== Setting SSH Keys on the Appliance
 
 Another recommended practice is to use SSH keys to access the appliance from a single machine.
 An SSH key provides access from one machine to another through the SSH protocol.
