--- a/doc-Appliance_Hardening_Guide/topics/SSL_Certs.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/SSL_Certs.adoc
@@ -1,11 +1,11 @@
 [[_chap_red_hat_cloudforms_security_guide_ssl_certs]]
-= Generating SSL Certificates for Your Appliance and Database
+=== Generating SSL Certificates for Your Appliance and Database
 
 It is important to enhance the security of SSL communication of your appliances, which, depending on your setup, may include your database appliance.
 The appliance image ships with a default SSL certificate.
 It is recommended to replace this certificate with your own certificate, either signed by a trusted Certificate Authority (CA) or self-signed.
 
-== Creating a Certificate Signing Request
+==== Creating a Certificate Signing Request
 
 The first step is to determine the host name of your appliance or database appliance by running the following command:
 
@@ -62,7 +62,7 @@ Running the command produces two files:
 
 At this stage, you would send the CSR to a trusted Certificate Authority (CA) and in return they would send you a signed certificate.
 
-== Creating a Self-signed Certificate
+==== Creating a Self-signed Certificate
 
 As an alternative to obtaining a signed certificate, you can use the `appliance.key` and `appliance.csr` files to create a self-signed certificate by running the following `openssl` commands:
 
@@ -78,7 +78,7 @@ This produces two files:
 * `server.cer` - The self-signed certificate
 
 [[_enabling_the_appliance_to_use_your_certificate]]
-== Enabling Your Certificate
+==== Enabling Your Certificate
 
 Despite whether you used a trusted CA or self-signed the certificate, you should now have your own certificate for your appliance.
 
