--- a/doc-Appliance_Hardening_Guide/topics/Server_Security.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/Server_Security.adoc
@@ -1,15 +1,11 @@
-= Server Security
+== Server Security
 
-:leveloffset: 2
 include::Firewall.adoc[]
 
-:leveloffset: 2
 include::SSL_Certs.adoc[]
 
-:leveloffset: 2
 include::Keys.adoc[]
 
-:leveloffset: 2
 include::SCAP.adoc[]
 
 
