--- a/doc-Appliance_Hardening_Guide/topics/UI_Password.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/UI_Password.adoc
@@ -1,5 +1,5 @@
 [[_chap_red_hat_cloudforms_security_guide_setting_the_password_for_the_administrative_user]]
-= Setting the Password for the Administrative User
+=== Setting the Password for the Administrative User
 
 {product-title} uses a unique `admin` user to control all functions in the web-based user interface.
 After installing the appliance, change the default password of the `admin` to restrict administrative access to the appliance's UI.
