--- a/doc-Appliance_Hardening_Guide/topics/Appliance_Security.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/Appliance_Security.adoc
@@ -1,7 +1,5 @@
-= Appliance Security
+== Appliance Security
 
-:leveloffset: 2
 include::UI_Password.adoc[]
 
-:leveloffset: 2
 include::HBAC.adoc[]
