Updated deep links in the General Configuration guide.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -420,7 +420,7 @@ The following options are available in the *Appliance Updates* section of *Red H
 
 [NOTE]
 ======
-If the appliance is registered to Red Hat Satellite, you can use content views to manage updates for {product-title}. For more information, see https://access.redhat.com/documentation/en/red-hat-satellite/6.2/content-management-guide/chapter-7-creating-content-views[Creating Content Views] in the _Red Hat Satellite 6 Content Management Guide_.
+If the appliance is registered to Red Hat Satellite, you can use content views to manage updates for {product-title}. For more information, see https://access.redhat.com/documentation/en/red-hat-satellite/6.2/single/content-management-guide#Creating_Content_Views[Creating Content Views] in the _Red Hat Satellite 6 Content Management Guide_.
 ======
 
 
@@ -450,7 +450,7 @@ To update the appliance operating system:
 
 Customers can license {product-title} for a limited set of providers. This ability is enabled by providing entitlement certificates that describe the features to be enabled. {product-title} can be shipped as a bundled product with other Red Hat products like Red Hat OpenStack Platform and Red Hat OpenShift, providing advanced management capabilities to these products.
 
-For more information on managing subscriptions for an IT infrastructure, see the Red Hat Subscription Management https://access.redhat.com/documentation/en-US/Red_Hat_Subscription_Management/1/html/Subscription_Concepts_and_Workflows/index.html[Subscription Concepts and Workflows] guide.
+For more information on managing subscriptions for an IT infrastructure, see the Red Hat Subscription Management https://access.redhat.com/documentation/en-US/Red_Hat_Subscription_Management/1/html-single/Subscription_Concepts_and_Workflows/index.html[Subscription Concepts and Workflows] guide.
 
 Entitlements provides the following enhancements:
 
