--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -245,8 +245,7 @@ done
 # ceilometer sample-list -m cpu |wc -l
 ------
 +
-. Add the configured OpenStack provider to {product-title}. See the "Adding OpenStack Providers" section in 
-ifdef::cfme[link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-providers/#adding_openstack_providers[Managing Providers].]
+. Add the configured OpenStack provider to {product-title}. See ifdef::cfme[link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-providers/#adding_openstack_providers[Adding OpenStack Providers] in _Managing Providers_.
 ifdef::miq[Managing Providers]
   After adding the provider, capacity and utilization data for your instances
   populate in a few minutes.
@@ -283,7 +282,7 @@ capacity and utilization charts under the menu:Compute[Infrastructure] tab.
 |=======================================================================
 
 ifdef::cfme[]
-For procedures to view capacity and utilization charts for hosts, clusters, and virtual machines, see the following sections in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-infrastructure-and-inventory/[Managing Infrastructure and Inventory] guide:
+For procedures to view capacity and utilization charts for hosts, clusters, and virtual machines, see the following sections in _Managing Infrastructure and Inventory_:
 
 * link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-infrastructure-and-inventory/#viewing_capacity_and_utilization_charts_for_a_host[Viewing Capacity and Utilization Charts for a Host]
 * link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-infrastructure-and-inventory/#viewing_capacity_and_utilization_charts_for_a_cluster[Viewing Capacity and Utilization Charts for a Cluster]
@@ -308,7 +307,7 @@ Charts created include:
 |====
 
 ifdef::cfme[]
-For the procedure to view Capacity and Utilization Charts for a Datastore, see section Viewing Capacity and Utilization Charts for a Datastore in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-infrastructure-and-inventory/[Managing Infrastructure and Inventory] guide.
+For the procedure to view Capacity and Utilization Charts for a Datastore, see section in link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-infrastructure-and-inventory/[Viewing Capacity and Utilization Charts for a Datastore] in _Managing Infrastructure and Inventory_.
 endif::cfme[]
 
 === Chart Features
