Updated one deep link in Scripting Actions in CloudForms.

--- a/doc-Scripting_Actions/topics/To_create_a_schema_for_a_class1.adoc
+++ b/doc-Scripting_Actions/topics/To_create_a_schema_for_a_class1.adoc
@@ -30,7 +30,7 @@ data from those child objects into the current object. If you give
 the current object with that name.
 
 . *On Entry*, *On Exit*, *On Error*, *Max Retries*, and *Max Time* are fields used mostly for state machines. Leave blank if not applicable. 
-ifdef::cfme[For more information, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/provisioning-virtual-machines-and-hosts[Provisioning Virtual Machines and Hosts] guide.]
+ifdef::cfme[For more information, see _Provisioning Virtual Machines and Hosts_.]
 
 . Click image:../images/1863.png[image] (*Add this entry*) to confirm the
 fields values.
