--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -245,7 +245,8 @@ done
 # ceilometer sample-list -m cpu |wc -l
 ------
 +
-. Add the configured OpenStack provider to {product-title}. See ifdef::cfme[link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-providers/#adding_openstack_providers[Adding OpenStack Providers] in _Managing Providers_.
+. Add the configured OpenStack provider to {product-title}. See
+ifdef::cfme[link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-providers/#adding_openstack_providers[Adding OpenStack Providers] in _Managing Providers_.]
 ifdef::miq[Managing Providers]
   After adding the provider, capacity and utilization data for your instances
   populate in a few minutes.
@@ -307,7 +308,7 @@ Charts created include:
 |====
 
 ifdef::cfme[]
-For the procedure to view Capacity and Utilization Charts for a Datastore, see section in link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-infrastructure-and-inventory/[Viewing Capacity and Utilization Charts for a Datastore] in _Managing Infrastructure and Inventory_.
+See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-infrastructure-and-inventory/[Viewing Capacity and Utilization Charts for a Datastore] in _Managing Infrastructure and Inventory_ for more information.
 endif::cfme[]
 
 === Chart Features
