Updated deep links in the Provisioning Virtual Machines and Hosts guide.

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests-openstack.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests-openstack.adoc
@@ -31,7 +31,7 @@ Parameters with a * next to the label are required to submit the provisioning re
 .. If you want the volume to be deleted once the instance terminates (thereby making it non-persistent), check *Delete on Instance Terminate*.
 .. To provision and add multiple volumes to the instance, click *Add Volume*. Doing so will add new fields you can fill in.
 +
-For more information about persistent storage in OpenStack, see the  https://access.redhat.com/documentation/en/red-hat-openstack-platform/version-8/storage-guide/#ch-intro-persistent[Red Hat OpenStack Platform Storage Guide].
+For more information about persistent storage in OpenStack, see the Red Hat OpenStack Platform _Storage Guide_.
 
 . Click the *Customize* tab to set additional instance options.
 .. Under *Credentials*, enter a *Root Password* for the *root* user access to the instance.
