Fixed external doc reference URLs for the Managing Providers guide

--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc
@@ -34,11 +34,11 @@ To collect capacity and utilization data for a Red Hat Enterprise Virtualization
 
 // Line break
 
-To install the Data Warehouse and Reports components in a Red Hat Enterprise Virtualization environment, see the link:https://access.redhat.com/documentation/en/red-hat-enterprise-virtualization/[Red Hat Enterprise Virtualization Installation Guide].
+To install the Data Warehouse and Reports components in a Red Hat Enterprise Virtualization environment, see the link:https://access.redhat.com/documentation/en/red-hat-virtualization/4.0/paged/installation-guide/[Red Hat Virtualization Installation Guide].
 
 // Line break
 
-ifdef::cfme[To create a {product-title} user in the Data Warehouse database, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/deployment-planning-guide/#data_collection_for_red_hat_enterprise_virtualization_3_3_and_3_4[Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4] in the _Deployment Planning Guide_.]
+ifdef::cfme[To create a {product-title} user in the Data Warehouse database, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/deployment-planning-guide/#data_collection_for_rhev_33_34[Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4] in the _Deployment Planning Guide_.]
 ifdef::miq[To create a {product-title} user in the Data Warehouse database, see "Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4" in the _Deployment Planning Guide_.]
 `
 ====
