--- a/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
@@ -55,7 +55,7 @@ The basic workflow when using {product-title} with an Ansible Tower provider is 
 
 [NOTE]
 ====
-For more information on Ansible playbooks, see the link:https://docs.ansible.com/ansible/playbooks.html[Ansible documentation].
+For more information on Ansible playbooks, see the link:https://docs.ansible.com/ansible/playbooks.html[Ansible playbook documentation].
 ====
 
 === Adding an Ansible Tower Provider
@@ -176,7 +176,7 @@ The service item's details can be viewed in menu:Services[My Services] in {produ
 
 [NOTE]
 ====
-Instead of running a single job at a time, multiple service catalog items can also be grouped together as a catalog bundle to create one deployment with multiple job templates. See https://access.redhat.com/documentation/en/red-hat-{product-title}/4.1/provisioning-virtual-machines-and-hosts/chapter-5-catalogs-and-services[Catalogs and Services] in _Provisioning Virtual Machines and Hosts_ for more information.
+Instead of running a single job at a time, multiple service catalog items can also be grouped together as a catalog bundle to create one deployment with multiple job templates. See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/provisioning-virtual-machines-and-hosts/chapter-5-catalogs-and-services#catalogs-services[Catalogs and Services] in _Provisioning Virtual Machines and Hosts_ for more information.
 ====
 
 
