--- a/doc-Managing_Providers/topics/Networking_Providers.adoc
+++ b/doc-Managing_Providers/topics/Networking_Providers.adoc
@@ -23,8 +23,8 @@ include::Removing_Network_Providers.adoc[]
 include::Viewing_Network_Providers_Timeline.adoc[]
 
 
-Besides, you can assign policy profiles to Network Providers, or remove it. The method for doing so is similar to that of any normal policy profile. 
-ifdef::cfme[See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/policies-and-profiles-guide/#assigning_policy_profiles_to_a_network_provider[Assigning Policy Profiles to a Network Provider] and https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/policies-and-profiles-guide/#removing_policy_profiles_from_a_network_provider[Removing Policy Profiles from a Network Provider].]
+You can also assign policy profiles to network providers, or remove them. The method for doing so is similar to that of any normal policy profile. 
+ifdef::cfme[See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/policies-and-profiles-guide/#assigning_policy_profiles_to_a_network_provider[Assigning Policy Profiles to a Network Provider] and https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/policies-and-profiles-guide/#removing_policy_profiles_from_a_network_provider[Removing Policy Profiles from a Network Provider] in the _Policies and Profiles Guide_.]
 
 
 
