--- a/doc-Managing_Providers/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
@@ -11,7 +11,7 @@ When using the `admin` credentials, a user in {product-title} provisions into th
 =====
 You can set whether {product-title} should use the Telemetry service or Advanced Message Queueing Protocol (AMQP) for event monitoring. If you choose Telemetry, you should first configure the *ceilometer* service on the undercloud to store events. See xref:openstack-events-uc[] for instructions.
 
-For more information about OpenStack Telemetry, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-telemetry[OpenStack Telemetry (ceilometer)] from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/architecture-guide[Red Hat OpenStack Platform Architecture Guide].
+For more information, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-telemetry[OpenStack Telemetry (ceilometer)] in the Red Hat OpenStack Platform _Architecture Guide_.
 =====
 
 
@@ -25,10 +25,10 @@ For more information about OpenStack Telemetry, see https://access.redhat.com/do
 
 . Select the appropriate *Zone* for the provider. By default, the zone is set to *default*.
 +
-NOTE: For more information, see the definition of host aggregates and availability zones in  https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-compute[OpenStack Compute (nova)] from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/architecture-guide[Red Hat OpenStack Platform Architecture Guide].
+NOTE: For more information, see the definition of host aggregates and availability zones in  https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-compute[OpenStack Compute (nova)] in the Red Hat OpenStack Platform _Architecture Guide_.
 
 . In the *Default* tab, under *Endpoints*, configure the host and authentication details of your OpenStack provider:
-.. Enter the *Host Name or IP address(IPv4 or IPv6)* of the provider. If your provider is an undercloud, use its hostname (see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/director-installation-and-usage/43-setting-the-hostname-for-the-system[Setting the Hostname for the System] from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/director-installation-and-usage/director-installation-and-usage[Red Hat OpenStack Director Installation and Usage] for more details)
+.. Enter the *Host Name or IP address(IPv4 or IPv6)* of the provider. If your provider is an undercloud, use its hostname (see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/single/director-installation-and-usage/#sect-Setting_the_Hostname_for_the_System[Setting the Hostname for the System] in Red Hat OpenStack Platform _Director Installation and Usage_ for more details)
 .. In *API Port*, set the public port used by the OpenStack Keystone service. By default, OpenStack uses port 5000 for this.
 .. Select the appropriate *Security Protocol* used for authenticating with your OpenStack provider.
 .. In the *Username* field, enter the name of an OpenStack user with privileged access (for example, *admin*). Then, provide its corresponding password in the *Password* and *Confirm Password* fields.
@@ -59,7 +59,7 @@ The adminURL endpoint must be accessible to the {product-title} Appliance that i
 [[openstack-events-uc]]
 == Configuring the Undercloud to Store Events
 
-To allow {product-title} to receive events from a Red Hat OpenStack Platform environment, you must configure the *notification_driver* option for the Compute service and Orchestration service in that environment. To do so, edit _undercloud.conf_, and set _store_events_ to _true_ before installing the undercloud. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/version-8/director-installation-and-usage/#chap-Installing_the_Undercloud[Installing the Undercloud] and https://access.redhat.com/documentation/en/red-hat-openstack-platform/version-8/director-installation-and-usage/#sect-Configuring_the_Director[Configuring the Director] from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/director-installation-and-usage/director-installation-and-usage[Red Hat OpenStack Director Installation and Usage] for related details.
+To allow {product-title} to receive events from a Red Hat OpenStack Platform environment, you must configure the *notification_driver* option for the Compute service and Orchestration service in that environment. To do so, edit _undercloud.conf_, and set _store_events_ to _true_ before installing the undercloud. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/single/director-installation-and-usage/#chap-Installing_the_Undercloud[Installing the Undercloud] and https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/single/director-installation-and-usage/#sect-Configuring_the_Director[Configuring the Director] in Red Hat OpenStack Platform _Director Installation and Usage_ for related details.
 
 
 
