updated links in Monitoring guide

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
@@ -17,8 +17,8 @@ image:1985.png[]
 
 . Use the expression editor to create your expression.
   This is the same expression editor used to create *Conditions*.
-ifdef::cfme[For details on how to use the expression editor, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/policies-and-profiles-guide/defining-policies-and-profiles[Policies and Profiles Guide].]
-ifdef::miq[For details on how to use the expression editor, see Policies and Profiles Guide.]
+ifdef::cfme[For details on how to use the expression editor, see the _Policies and Profiles Guide_.]
+ifdef::miq[For details on how to use the expression editor, see the Policies and Profiles Guide.]
 +
 image:1986.png[]
 +
