--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Normal_Operating_Range_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Normal_Operating_Range_Alert.adoc
@@ -3,7 +3,7 @@
 
 Normal operating range alerts enables you to be notified when the normal operating range is exceeded, or falls below for a period of time from 1 minute to 2 hours.
 Capacity and utilization must be enabled for normal operating ranges to be calculated.
-See the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/general-configuration/general-configuration[General Configuration] guide for more information.
+See _General Configuration_ for more information.
 
 . Navigate to menu:Control[Explorer].
 . Click the *Alerts* accordion, then click  image:1847.png[] (*Configuration*),  image:1862.png[] (*Add a new Alert*).
