--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Real_Time_Performance_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Real_Time_Performance_Alert.adoc
@@ -3,7 +3,7 @@
 
 Real Time Performance alerts enables you to be notified immediately when a performance threshold has been met for a virtual machine, host, or cluster.
 Capacity and Utilization must be enabled for performance thresholds to be detected.
-ifdef::cfme[See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/general-configuration/general-configuration[General Configuration] for more information.]
+ifdef::cfme[See _General Configuration_ for more information.]
 ifdef::miq[See General Configuration for more information.]
 
 . Navigate to menu:Control[Explorer].
