--- a/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback.adoc
@@ -4,7 +4,7 @@
 The chargeback feature allows you to calculate monetary virtual machine charges based on owner or company tag.
 To use this feature you must be collecting capacity and utilization data.
 
-ifdef::cfme[For information on server control settings and capacity & utilization collection settings, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/general-configuration/general-configuration[General Configuration].]
+ifdef::cfme[For information on server control settings and capacity & utilization collection settings, see _General Configuration_.]
 ifdef::miq[For information on server control setting and capacity & utilization collection settings, see General Configuration.]
 
 include::Chargeback_Rates.adoc[]
