updated links to external guides in Policies

--- a/doc-Policies_and_Profiles_Guide/topics/To_create_a_compliance_Policy.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_create_a_compliance_Policy.adoc
@@ -3,7 +3,7 @@
 Create compliance policies by assigning or creating a condition. {product-title} automatically assigns the events and actions to the compliance policy as opposed to a control policy where you must define this yourself. The entity type (VM or host, for example) compliance check event is
 assigned to the compliance policy. A compliance policy runs the mark as compliant action when the virtual machine or host passes all of the conditions. If any of the conditions are not met, then the virtual machine or host is marked as non-compliant.
 
-ifdef::cfme[If you do not know how to create a condition, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/policies-and-profiles-guide/#Creating_a_new_Policy_Condition[Creating a new Policy Condition].]
+ifdef::cfme[To create a condition, see xref:Creating_a_new_Policy_Condition[].]
 ifdef::miq[If you do not know how to create a condition, see Creating a New Policy Condition.]
 Carefully plan the purpose of your policy before creating it. You can also use a scope expression that is tested immediately when the compliance check event
 triggers the policy. If the item is out of scope, then the policy does not continue on to the conditions, and none of the associated actions run.
@@ -20,7 +20,7 @@ image:../images/1935.png[image]
 +
 . Uncheck *Active* if you do not want this policy processed even when assigned to a resource.
 
-. You can enter a scope here. (You can also create a scope as part of a condition, or not use one at all.) If the host or virtual machine is not included in the scope, NO actions run.
+. You can enter a scope here. (You can also create a scope as part of a condition, or not use one at all.) If the host or virtual machine is not included in the scope, no actions run.
 
 . In the *Notes* area, add a detailed explanation of the policy.
 
