--- a/doc-Policies_and_Profiles_Guide/topics/Editing_Policy_Event_Assignments.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/Editing_Policy_Event_Assignments.adoc
@@ -10,7 +10,7 @@ The policy evaluates its scopes and conditions when specified events occur in yo
 . Click image:../images/1847.png[image] (*Configuration*), image:../images/1851.png[image] (*Edit this Policy's Event assignments*).
 
 . Check all the events you want to assign to this policy. 
-ifdef::cfme[For a description of the events, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/policies-and-profiles-guide/#chap_events[Events].]
+ifdef::cfme[For a description of the events, see xref:Events[] .]
 
 . Click *Save*.
 
