--- a/doc-Policies_and_Profiles_Guide/topics/To_create_a_Condition_to_check_file_contents_of_a_host.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_create_a_Condition_to_check_file_contents_of_a_host.adoc
@@ -4,7 +4,7 @@
 expressions thoroughly before using them in a production environment.
 
 Note that to search file contents you will need to have collected the file using a host analysis profile. 
-ifdef::cfme[See the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-infrastructure-and-inventory/#sect_hosts[Hosts] chapter in the *Managing Infrastructure and Inventory* guide for instructions.]
+ifdef::cfme[See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-infrastructure-and-inventory/#sect_hosts[Hosts] in _Managing Infrastructure and Inventory_ for instructions.]
 
 . Navigate to menu:Control[Explorer].
 
