--- a/doc-Policies_and_Profiles_Guide/topics/To_create_an_SNMP_Action.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_create_an_SNMP_Action.adoc
@@ -1,8 +1,7 @@
 ==== Creating an SNMP Action
 
 To send SNMP traps from the {product-title} server, you must have the `Notifier` server role and the SNMP daemons enabled. 
-ifdef::cfme[For information on enabling SNMP, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/general-configuration/general-configuration[General Configuration]]
-guide.
+ifdef::cfme[For information on enabling SNMP, see _General Configuration_.]
 
 . Navigate to menu:Control[Explorer].
 
