--- a/doc-Managing_Infrastructure_and_Inventory/topics/Instance_Live_Migration.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Instance_Live_Migration.adoc
@@ -1,4 +1,4 @@
-_Live migration_ involves moving a live instance between Compute nodes. Live migration is useful for avoiding instance downtime during cloud maintenance or load management. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/migrating-instances/chapter-1-how-to-migrate-a-live-instance[How to Migrate a Live Instance] (from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/migrating-instances/migrating-instances[Red Hat OpenStack Platform Migrating Instances] guide) for details on the underlying OpenStack process.
+_Live migration_ involves moving a live instance between Compute nodes. Live migration is useful for avoiding instance downtime during cloud maintenance or load management. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/version-8/migrating-instances/#how_to_migrate_a_live_instance[How to Migrate a Live Instance] (in the Red Hat OpenStack Platform _Migrating Instances_ guide) for details on the underlying OpenStack process.
 
 To migrate a live instance:
 
@@ -10,7 +10,7 @@ To migrate a live instance:
 
 . On the *Migrate Instance* section, select your preferred migration options:
 ** *Auto-select Host?*: let the OpenStack provider automatically choose a destination Compute node. If you prefer to choose a specific node, uncheck this option and choose from the *Destination Host* dropdown.
-** *Block Migration*: check this option to perform a _block-based_ migration. With this migration, the entire virtual machine image is moved from the source node to the destination node. If your OpenStack provider uses _shared storage_, leave this option unchecked. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/version-8/migrating-instances/#prerequisites[Prerequisites] (from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/migrating-instances/migrating-instances[Red Hat OpenStack Platform Migrating Instances] guide) for related information.
+** *Block Migration*: check this option to perform a _block-based_ migration. With this migration, the entire virtual machine image is moved from the source node to the destination node. If your OpenStack provider uses _shared storage_, leave this option unchecked. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/version-8/migrating-instances/#prerequisites[Prerequisites] (in the Red Hat OpenStack Platform _Migrating Instances_ guide) for related information.
 ** *Disk Over Commit*: check this option to prevent the OpenStack provider from verifying first whether the destination host has available disk space to host the instance.
 
 . Click *Submit*.
