--- a/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Multiple_Repositories.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Multiple_Repositories.adoc
@@ -8,7 +8,7 @@ Refresh a repository for its properties and virtual machines.
 . Click *OK*.
 
 Identify a SmartProxy that has access to the repository to refresh it.
-ifdef::cfme[For more information on #Default Repository# SmartProxy parameter, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/general-configuration/general-configuration[General Configuration].]
+ifdef::cfme[For more information on #Default Repository# SmartProxy parameter, see _General Configuration_.]
 ifdef::miq[For more information on #Default Repository# SmartProxy parameter, see _General Configuration_.]
 
 [NOTE]
