--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Event_Logs_for_an_Instance_or_Image.adoc
@@ -1,7 +1,7 @@
 = Viewing Event Logs for an Instance or Image
 
 Using an *Analysis Profile*, collect event log information from your instances.
-ifdef::cfme[See section link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/general-configuration/#profiles[Setting a Default Analysis Profile] in the CloudForms General Configuration guide.]
+ifdef::cfme[See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/general-configuration/#profiles[Setting a Default Analysis Profile] in _General Configuration_.]
 ifdef::miq[See section "Setting a Default Analysis Profile" in _General Configuration_.]
 
 [NOTE]
