Updated the deep links in the Managing Infrastructure and Inventory guide

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Resizing_an_Instance_Change_Flavor.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Resizing_an_Instance_Change_Flavor.adoc
@@ -8,7 +8,7 @@
 ====
 Keep in mind that the instance will undergo a controlled shutdown when you change its flavor.
 
-For more information about the requirements and underlying OpenStack process involved, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/instances-and-images-guide/chapter-3-virtual-machine-instances#section-resize-instance[Resize an Instance] from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/instances-and-images-guide/instances-and-images-guide[Red Hat OpenStack Platform Instances and Images Guide].
+For more information about the requirements and underlying OpenStack process involved, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/single/instances-and-images-guide/#section-resize-instance[Resize an Instance] in the Red Hat OpenStack Platform _Instances and Images Guide_.
 ====
 
 To resize an instance through {product-title}:
@@ -19,7 +19,7 @@ To resize an instance through {product-title}:
 . In the *Reconfigure Instance* section, select the new flavor you want from the *Choose Flavor* dropdown.
 . Click *Submit*. Doing so will initiate the flavor change, and it might take several minutes before {product-title} verifies whether the change was successful.
 
-See xref:flavors[] and https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/instances-and-images-guide/chapter-3-virtual-machine-instances#section-flavors[Manage Flavors] (from the https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/instances-and-images-guide/instances-and-images-guide[Red Hat OpenStack Platform Instances and Images Guide]) for more information.
+See xref:flavors[] and https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/single/instances-and-images-guide/#section-flavors[Manage Flavors] (in the Red Hat OpenStack Platform _Instances and Images Guide_) for more information.
 
 //http://docs.openstack.org/user-guide/cli_change_the_size_of_your_server.html
 
