--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -13,14 +13,14 @@ Before opening a console for a virtual machine, you must first configure console
 
 All of the above make use of the websocket protocol supported by all recent versions of browsers, and can use SSL to encrypt the websocket connection.
 
-OpenStack:: {product-title} only makes an API call to get the URL for the console and open that console in a web browser; see https://access.redhat.com/documentation/en/red-hat-enterprise-linux-openstack-platform/version-7/instances-and-images-guide/#connect_to_an_instance[Directly Connect to a VNC Console] in the _Red Hat Enterprise Linux OpenStack Platform 7 Instances and Images Guide_ for more details.
+OpenStack:: {product-title} only makes an API call to get the URL for the console and open that console in a web browser; see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/single/instances-and-images-guide/#connect_to_an_instance[Directly Connect to a VNC Console] in the Red Hat OpenStack Platform _Instances and Images Guide_ for more details.
 
 Red Hat Enterprise Virtualization Manager and VMWare:: By default, the websocket connection runs over HTTPS or HTTP based on how the application was accessed.
 Under an appliance, you will most likely use HTTPS, and, therefore, the websocket connection will be wss:// (websocket with SSL).
 +
 When configuring Red Hat Virtualization Manager for virtual machine console access, set the display type for each virtual machine to `noVNC` or `SPICE HTML5`. 
 ifdef::cfme[Support for the SPICE HTML5 console client is offered as a technology preview.]
-For more information on configuring console options, see the https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Virtualization/3.6/html/Virtual_Machine_Management_Guide/sect-Configuring_Console_Options.html[Configuring Console Options] section in the _Red Hat Enterprise Virtualization Virtual Machine Management Guide_.
+For more information on configuring console options, see https://access.redhat.com/documentation/en/red-hat-virtualization/4.0/single/virtual-machine-management-guide#sect-Configuring_Console_Options[Configuring Console Options] in the Red Hat Virtualization _Virtual Machine Management Guide_.
 
 [[configuring-console-access-to-vmware-esxi-hosts-at-a-network-layer]]
 == Configuring Console Access to VMware ESXi Hosts At A Network Layer
