Updated version numbers from 4.1 to 4.2, and from darga to euwe.

--- a/doc-Installing_on_Google_Compute_Engine/topics/installation.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/topics/installation.adoc
@@ -14,7 +14,7 @@ ifdef::miq[]
 
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *Google Compute Engine* from the *--Choose your platform--* list.
-. Select *Stable (darga-2)* from the *--Choose a release--* list.
+. Select *Stable (euwe-2)* from the *--Choose a release--* list.
 . Follow the instructions to download the appliance.
 endif::miq[]
 
@@ -59,6 +59,7 @@ When the {product-title} Google Compute Engine appliance has finished downloadin
 .. Configure any other fields as desired, and click *Create*.
 
 Your new virtual machine instance, as well as the external IP address for accessing the {product-title} interface, appears under *VM instances*.
+
 
 
 
