--- a/doc-Installing_on_VMware_vSphere/topics/installation.adoc
+++ b/doc-Installing_on_VMware_vSphere/topics/installation.adoc
@@ -14,7 +14,7 @@ ifdef::miq[]
 
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *VMware vSphere* from the *--Choose your platform--* list.
-. Select *Stable (darga-2)* from the *--Choose a release--* list.
+. Select *Stable (euwe-2)* from the *--Choose a release--* list.
 . Follow the instructions to download the appliance.
 endif::miq[]
 
@@ -66,6 +66,7 @@ Use the following procedure to upload the {product-title} appliance OVF template
 . Review your settings and click *Finish*.
 
 The progress of the import task appears in the vSphere Client Status panel.
+
 
 
 
