--- a/doc-Installing_on_Red_Hat_Enterprise_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Virtualization/topics/installation.adoc
@@ -14,7 +14,7 @@ ifdef::miq[]
 
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *Red Hat Enterprise Virtualization* from the *--Choose your platform--* list.
-. Select *Stable (darga-2)* from the *--Choose a release--* list.
+. Select *Stable (euwe-2)* from the *--Choose a release--* list.
 . Follow the instructions to download the appliance.
 endif::miq[]
 
@@ -227,6 +227,7 @@ After uploading the appliance to the export storage domain, import it as a templ
 . Start the newly created {product-title} appliance virtual machine.
 
 Your Red Hat Enterprise Virtualization environment now contains a running {product-title} appliance.
+
 
 
 
