Policies & Profiles: Revise descriptions of supported kubernetes events
https://bugzilla.redhat.com/show_bug.cgi?id=1369287

--- a/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
@@ -45,9 +45,9 @@ checking of a condition.
 [cols=",",options="header",]
 |====
 |Event |Description
-|Container Image Analysis Complete |Check the condition when an image analysis of a container completes.
+|Container Image Analysis Complete |Check the condition when an analysis of a container image completes.
 
-|Container Image Discovered |Check the condition when a container image is discovered.
+|Container Image Discovered |Check the condition when a new container image is discovered.
 
 |Container Image Compliance Check |Check the condition when a compliance check is performed on an image.
 
@@ -55,7 +55,7 @@ checking of a condition.
 
 |Container Image Compliance Failed |Check the condition when an image fails a compliance check.
 
-|Container Node Failed Mount |Check the condition when a node mount fails.
+|Container Node Failed Mount |Check the condition when a node fails to mount a volume for a pod.
 
 |Container Node Invalid Disk Capacity |Check the condition when a node's disk capacity is invalid.
 
@@ -75,11 +75,11 @@ checking of a condition.
 
 |Container Node Compliance Failed |Check the condition when a node fails a compliance check.
 
-|Pod Deadline Exceeded |Check the condition when a pod deadline exceeds.
+|Pod Deadline Exceeded |Check the condition when a pod with specified deadline exceeds it and is terminated.
 
-|Pod Failed Scheduling |Check the condition when a pod scheduling fails.
+|Pod Failed Scheduling |Check the condition when scheduling a pod fails.
 
-|Pod Failed Sync |Check the condition when a sync performed on a pod fails.
+|Pod Failed Sync |Check the condition when getting a pod to its desired state fails (a frequent reason is failure to download the image).
 
 |Pod Failed Validation |Check the condition when a pod validation fails.
 
@@ -91,9 +91,9 @@ checking of a condition.
 
 |Pod nodeSelector Mismatching |Check the condition when a pod nodeSelector mismatches.
 
-|Pod Out of Disk |Check the condition when a pod is out of disk node.
+|Pod Out of Disk |Check the condition when a pod is out of disk space.
 
-|Pod Scheduled |Check the condition when a pod is scheduled onto the host.
+|Pod Scheduled |Check the condition when a pod is scheduled onto the node.
 
 |Pod Compliance Check |Check the condition when a compliance check is performed on a pod.
 
@@ -373,7 +373,3 @@ virtual machine from the {product-title} console.
 |VM Template Create Complete |Check the condition when a virtual machine
 template is created.
 |====
-
-
-
-
