s/provider/infrastracture provider/ in 2 chapter titles
There are short chapters here for assigning to various things,
including all kinds of providers: cloud providers, network providers,
etc...  These 2 chapters talk of Compute > Infrastructure > Providers.

Will rename the files in separate commit.

--- a/doc-Policies_and_Profiles_Guide/topics/Assigning_Policy_Profiles_to_an_Infrastructure_Provider.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/Assigning_Policy_Profiles_to_an_Infrastructure_Provider.adoc
@@ -1,5 +1,5 @@
-[[assigning-policy-profiles-to-a-provider]]
-==== Assigning Policy Profiles to a Provider
+[[assigning-policy-profiles-to-an-infrastructure-provider]]
+==== Assigning Policy Profiles to an Infrastructure Provider
 
 . Navigate to menu:Compute[Infrastructure > Providers], verify the provider you need to assign the policy profiles to.
 
@@ -10,4 +10,3 @@
 . Check the policy profiles you require to apply to the provider. It turns blue to show its assignment state has changed.
 
 . Click *Save*.
-
