--- a/doc-Policies_and_Profiles_Guide/topics/To_assign_policies_to_a_Management_System.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_assign_policies_to_a_Management_System.adoc
@@ -1,5 +1,5 @@
-[[assigning-policy-profiles-to-a-provider]]
-==== Assigning Policy Profiles to a Provider
+[[assigning-policy-profiles-to-an-infrastructure-provider]]
+==== Assigning Policy Profiles to an Infrastructure Provider
 
 . Navigate to menu:Compute[Infrastructure > Providers], verify the provider you need to assign the policy profiles to.
 
@@ -10,4 +10,3 @@
 . Check the policy profiles you require to apply to the provider. It turns blue to show its assignment state has changed.
 
 . Click *Save*.
-
