--- a/doc-Policies_and_Profiles_Guide/topics/To_remove_Policy_Profiles_from_a_Management_System.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_remove_Policy_Profiles_from_a_Management_System.adoc
@@ -1,5 +1,5 @@
-[[removing-policy-profiles-from-a-provider]]
-==== Removing Policy Profiles from a Provider
+[[removing-policy-profiles-from-an-infrastructure-provider]]
+==== Removing Policy Profiles from an Infrastructure Provider
 
 . Navigate to menu:Compute[Infrastructure > Providers], check the providers you want to remove the policy profile from.
 
@@ -8,4 +8,3 @@
 . Uncheck the policy profile you need to remove. It turns blue to show that its assignment state has changed.
 
 . Click *Save*.
-
