Creating a Compliance Policy: link to create/assign condition
Previous instructions only covered assigning an existing
condition, while creating a new condition is more likely flow,
especially for users doing it the first time.

--- a/doc-Policies_and_Profiles_Guide/topics/To_create_a_compliance_Policy.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_create_a_compliance_Policy.adoc
@@ -11,7 +11,9 @@ triggers the policy. If the item is out of scope, then the policy does not conti
 
 . Navigate to menu:Control[Explorer].
 
-. Click on the *Policies* accordion, and select VM or host compliance policies.
+. Click on the *Policies* accordion, and select *Compliance Policies*.
+
+. Select either *Host Compliance Policies* or *VM Compliance Policies* or *Replicator Compliance Policies* or *Pod Compliance Policies* or *Container Node Compliance Policies* or *Container Image Compliance Policies*.
 
 . Click image:../images/1847.png[image] (*Configuration*), image:../images/1862.png[image] (*Add a new Compliance Policy*).
 
@@ -27,17 +29,16 @@ image:../images/1935.png[image]
 
 . Click *Add*.
 
-. Click image:../images/1847.png[image] (*Configuration*), image:../images/1851.png[image] (*Edit this Policy's Condition assignments*).
+You should add one or several conditions:
 
-. Select the required conditions from the *Available Conditions* box. Use the `Ctrl` key to select multiple actions.
-+
-image:../images/1934.png[image]
-+
-. Click image:../images/1876.png[image] (*Move selected Conditions into this Policy*).
+* You can create a new condition by clicking image:../images/1847.png[image] (*Configuration*), image:../images/1862.png[image] (*Create a new Condition assigned to this Policy*), as described in xref:Creating_a_new_Policy_Condition[].
 
-. Click *Save*. By default, if any of the conditions are false, the virtual machine is marked as non-compliant.
+* You can use an existing condition by clicking image:../images/1847.png[image] (*Configuration*), image:../images/1851.png[image] (*Edit this Policy's Condition assignments*), as described in xref:policy-edit-condition-assignment[].
 
-. To add other actions, such as sending an email if the virtual machine fails the compliance test, click *VM Compliance Check*.
+By default, if any of the conditions are false, the virtual machine is marked as non-compliant.
+To add other actions, such as sending an email if the virtual machine fails the compliance test:
+
+. Click the *Compliance Check* event under the policy (exact name depends on entity type, for example *VM Compliance Check*).
 
 . Click image:../images/1847.png[image] (*Configuration*), image:../images/1851.png[image] (*Edit Actions for this Policy Event*).
 
@@ -50,8 +51,3 @@ image:../images/1933.png[image]
 . Click *Add*.
 
 You can now make this part of a policy profile. After assigning the policy profile to the virtual machine, you can check it for its compliance status either on a schedule or on demand.
-
-
-
-
-
